--- a/src/components/Contact.module.css
+++ b/src/components/Contact.module.css
@@ -5,6 +5,8 @@
   background-color: #000e24;
   border-radius: 12px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  position: relative;
+  z-index: 1;
 }
 
 .section h1 {
