--- a/src/components/Profile.module.css
+++ b/src/components/Profile.module.css
@@ -5,6 +5,9 @@
   text-align: center;
   color: white;
   font-family: 'Poppins', sans-serif;
+  background-image: url(/ferrariblack.jpg);
+  background-size: cover;
+  background-position: center;
   z-index: 1;
 }
 
@@ -14,21 +17,62 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: radial-gradient(circle, #32008f 20%, transparent 70%);
+  background: radial-gradient(circle, #a30000 20%, transparent 70%);
   filter: blur(50px);
   z-index: -1;
+}
+
+.avatar_wrapper {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.avatar_wrapper::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  background: url('/wheel2.png') no-repeat center center;
+  background-size: cover;
+  animation: rotate-wheel 0.5s linear infinite;
+  z-index: 0;
+}
+
+.ant-avatar {
+  position: relative;
+  z-index: 1;
+  border-radius: 50%;
+}
+
+@keyframes rotate-wheel {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .profile_description {
   margin-top: 20px;
   text-align: center;
   line-height: 1.5;
+  color: rgb(255, 255, 255);
   font-family: 'Poppins', sans-serif;
   font-size: 1.2rem;
 }
 
 .project_cards {
-  margin-top: 50px;
+  margin-top: 70px;
 }
 
 .project_skills {
