--- a/src/components/Profile.module.css
+++ b/src/components/Profile.module.css
@@ -75,29 +75,14 @@
   margin-top: 70px;
 }
 
-.project_skills {
-  margin-top: 10px;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 5px;
-}
-
-.project_links {
-  margin-top: 15px;
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-}
-
 .ant-card {
   border-radius: 15px;
   overflow: hidden;
+  width: 80%;
+  padding: 20px;
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.5);
-}
-
-.ant-card-hoverable:hover {
-  transform: scale(1.05);
-  transition: transform 0.3s ease;
+  background: linear-gradient(145deg, #1e1e2f, #28283e);
+  color: white;
 }
 
 .ant-card-meta-title {
@@ -106,27 +91,99 @@
 }
 
 .ant-card-meta-description {
-  color: #ffffff !important;
+  color: #cccccc !important;
   font-size: 1rem;
 }
 
-.ant-tag {
-  font-size: 0.8rem;
-  padding: 5px 10px;
+.ant-card-hoverable:hover {
+  transform: scale(1.05);
+  transition: transform 0.3s ease;
 }
 
+.modal_body {
+  background: linear-gradient(145deg, #1e1e2f, #28283e);
+  color: white;
+  padding: 2rem;
+  border-radius: 15px;
+}
+
+.modal_image {
+  width: 100%;
+  border-radius: 15px;
+  margin-bottom: 1rem;
+}
+
+.modal_title {
+  color: #00b7cf;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.modal_links {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.card_image_wrapper {
+  position: relative;
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+}
+
+.card_image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.3s ease;
+}
+
+.card_title_overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px;
+  background: rgba(0, 0, 0, 0.6);
+  color: white;
+  font-size: 1.2rem;
+  text-align: center;
+  z-index: 1;
+}
+
+.card_image_wrapper:hover .card_image {
+  transform: scale(1.1);
+}
+
+@media (min-width: 1024px) and (max-width: 1440px) {
+  .card_image_wrapper {
+    height: 400px;
+  }
+}
+
+@media (min-width: 1441px) {
+  .card_image_wrapper {
+    height: 450px;
+  }
+}
 @media (max-width: 768px) {
   .profile {
     padding: 50px 15px;
   }
 
-  .profile-description {
-    font-size: 1rem;
+  .project_cards {
+    margin-top: 50px;
   }
 
   .ant-card {
     width: 90%;
     height: auto;
+  }
+
+  .profile_description {
+    font-size: 1rem;
   }
 }
 
@@ -135,12 +192,21 @@
     padding: 30px 10px;
   }
 
-  .profile-description {
+  .profile_description {
     font-size: 0.85rem;
   }
 
   .ant-card {
     width: 100%;
     height: auto;
+    margin: 0 auto;
+  }
+
+  .modal_body {
+    padding: 1rem;
+  }
+
+  .modal_title {
+    font-size: 1.2rem;
   }
 }
