--- a/src/components/Profile.module.css
+++ b/src/components/Profile.module.css
@@ -5,21 +5,10 @@
   text-align: center;
   color: white;
   font-family: 'Poppins', sans-serif;
+  z-index: 1;
   background-image: url(/ferrariblack.jpg);
   background-size: cover;
   background-position: center;
-  z-index: 1;
-}
-
-.animated_background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background: radial-gradient(circle, #a30000 20%, transparent 70%);
-  filter: blur(50px);
-  z-index: -1;
 }
 
 .avatar_wrapper {
@@ -31,6 +20,7 @@
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  margin: 0 auto;
 }
 
 .avatar_wrapper::before {
