--- a/src/components/ProjectCard.module.css
+++ b/src/components/ProjectCard.module.css
@@ -1,7 +1,13 @@
+.card_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .card_image_wrapper {
   position: relative;
   width: 100%;
-  height: 200px;
+  height: 250px;
   overflow: hidden;
 }
 
@@ -12,19 +18,25 @@
   transition: transform 0.3s ease;
 }
 
-.card_title_overlay {
+.card_image_wrapper:hover .card_image {
+  transform: scale(1.1);
+}
+
+.card_title {
+  width: 100%;
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+  background: rgba(255, 255, 255, 0.164) !important;
+  backdrop-filter: blur(10px) !important;
+  -webkit-backdrop-filter: blur(10px);
+  border-radius: 0 0 15px 15px;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 100%;
-  padding: 10px;
-  background: rgba(0, 0, 0, 0.6);
-  color: white;
-  font-size: 1.2rem;
-  text-align: center;
-  z-index: 1;
-}
+  right: 0;
 
-.card_image_wrapper:hover .card_image {
-  transform: scale(1.1);
+  padding: 10px;
 }
