--- a/src/components/Profile.module.css
+++ b/src/components/Profile.module.css
@@ -5,7 +5,7 @@
   text-align: center;
   color: white;
   font-family: 'Poppins', sans-serif;
-  background: linear-gradient(90deg, #003686, #240046);
+  background: linear-gradient(90deg, #003f72, #240046);
   z-index: 1;
 }
 
