--- a/src/index.css
+++ b/src/index.css
@@ -1,49 +1,54 @@
-:root {
+html[data-theme='dark'] {
   --primary-bg: #0a192f;
-  --secondary-bg: #172a45;
+  --secondary-bg: #003785;
+  --secondary-bg2: #00b899;
   --text-color: rgba(255, 255, 255, 0.9);
   --card-bg: rgba(255, 255, 255, 0.1);
+  --gradient-start: #000133;
+  --gradient-end: #330063;
 }
 
-[data-theme='light'] {
-  --primary-bg: #f5f5f5;
-  --secondary-bg: #eaeaea;
+html[data-theme='light'] {
+  --primary-bg: #888888;
+  --secondary-bg: #14005a;
+  --secondary-bg2: #2d0080;
   --text-color: #0a192f;
-  --card-bg: #ffffff;
+  --card-bg: #000000;
+  --gradient-start: #cccccc;
+  --gradient-end: #2e006b;
 }
 
+html,
 body {
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
   background: var(--primary-bg);
   color: var(--text-color);
-  transition: background 0.3s ease, color 0.3s ease;
 }
 
 a {
   text-decoration: none;
-  color: var(--primary-color);
-  transition: color var(--transition-duration);
+  color: var(--text-color);
+  transition: color 0.3s ease;
 }
 
 a:hover {
-  color: var(--accent-color);
+  color: var(--secondary-bg);
 }
 
 button {
   cursor: pointer;
   border: none;
-  background-color: var(--primary-color);
-  color: var(--background-color);
+  background-color: var(--text-color);
+  color: var(--primary-bg);
   padding: 0.5rem 1rem;
   border-radius: 5px;
   font-size: 1rem;
-  transition: background-color var(--transition-duration),
-    color var(--transition-duration);
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 button:hover {
-  background-color: var(--accent-color);
-  color: var(--primary-color);
+  background-color: var(--secondary-bg);
+  color: var(--text-color);
 }
