--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 html[data-theme='dark'] {
+  --desc-text: rgb(255, 255, 255);
   --primary-bg: #0a192f;
   --secondary-bg: #003785;
   --secondary-bg2: #00b899;
-  --text-color: rgba(255, 255, 255, 0.9);
+  --text-color: rgb(255, 255, 255);
   --card-bg: rgba(255, 255, 255, 0.1);
   --gradient-start: #000133;
   --gradient-end: #330063;
@@ -10,9 +11,10 @@ html[data-theme='dark'] {
 
 html[data-theme='light'] {
   --primary-bg: #888888;
+  --desc-text: black;
   --secondary-bg: #14005a;
   --secondary-bg2: #2d0080;
-  --text-color: #0a192f;
+  --text-color: #000000;
   --card-bg: #000000;
   --gradient-start: #cccccc;
   --gradient-end: #2e006b;
