--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
 html[data-theme='dark'] {
   --desc-text: rgb(255, 255, 255);
+  --desc-back: rgba(121, 121, 121, 0.1);
   --primary-bg: #0a192f;
   --secondary-bg: #003785;
   --secondary-bg2: #00b899;
+  --accent-color: rgb(226, 0, 0);
+  --icon-col: rgb(0, 130, 173);
   --text-color: rgb(255, 255, 255);
   --card-bg: rgba(255, 255, 255, 0.1);
   --gradient-start: #000133;
@@ -10,10 +13,13 @@ html[data-theme='dark'] {
 }
 
 html[data-theme='light'] {
+  --desc-back: rgba(255, 255, 255, 0.1);
+  --accent-color: rgb(0, 255, 234);
   --primary-bg: #888888;
-  --desc-text: black;
+  --desc-text: rgb(0, 0, 0);
   --secondary-bg: #14005a;
   --secondary-bg2: #2d0080;
+  --icon-col: rgb(255, 255, 255);
   --text-color: #000000;
   --card-bg: #000000;
   --gradient-start: #cccccc;
