--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ html[data-theme='dark'] {
   --desc-text: rgb(255, 255, 255);
   --desc-back: rgba(121, 121, 121, 0.1);
   --primary-bg: #0a192f;
-  --secondary-bg: #003785;
+  --secondary-bg: #ffffff;
   --secondary-bg2: #00b899;
   --accent-color: rgb(226, 0, 0);
   --icon-col: rgb(0, 130, 173);
